Copy and update objects - GCS API requests assertion tests (#203)